--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -1,12 +1,17 @@
 :root {
-    .header-parent {
-        background-color: var(--background-header-color);
-        padding: 20px 100px;
-        display: flex;
-        justify-content: space-between;
-    }
-    .logo img {
-        width: 140px;
-        height: 45px;
-    }
+  .header-parent {
+    background-color: var(--background-header-color);
+    padding: 20px 100px;
+    display: flex;
+    justify-content: space-between;
+  }
+  .logo img {
+    width: 140px;
+    height: 45px;
+  }
+  .stake-governance {
+    font-size: 24px;
+    text-transform: uppercase;
+    font-weight: 700;
+  }
 }
