call coingecko api

--- a/src/components/connect-wallet/ConnectWallet.module.scss
+++ b/src/components/connect-wallet/ConnectWallet.module.scss
@@ -20,6 +20,10 @@
     .wallet-item:hover {
       background-color: rgb(164, 196, 185);
     }
+    z-index: 100;
+    .btn-add-wallet {
+      cursor: pointer;
+    }
   }
   .close {
     display: none;
