--- a/src/_app.scss
+++ b/src/_app.scss
@@ -33,3 +33,16 @@ body {
   bottom: 0;
   width: 100%;
 }
+.MuiOutlinedInput-root {
+  width: 100px;
+  height: 30px;
+}
+.text-head {
+  padding: 20px 0;
+  text-align: center;
+}
+.text-head span {
+  font-size: 25px;
+  font-weight: 700;
+  color: #72BF65;
+}
