--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -13,5 +13,13 @@
     font-size: 24px;
     text-transform: uppercase;
     font-weight: 700;
+    display: flex;
+    div {
+      padding: 0 10px;
+      cursor: pointer;
+    }
+    div:hover {
+      text-decoration: underline;
+    }
   }
 }
