--- a/src/components/connect-wallet/ConnectWallet.module.scss
+++ b/src/components/connect-wallet/ConnectWallet.module.scss
@@ -1,6 +1,6 @@
 :root {
   .button {
-    background-color: var(--primary-button-bg);
+    background-color: var(--btn-background-color);
     padding: 10px;
     border-radius: 10px;
     color: var(--color-text-white);
