--- a/src/_app.scss
+++ b/src/_app.scss
@@ -39,7 +39,7 @@ body {
 }
 .MuiOutlinedInput-root {
   width: 100px;
-  height: 30px;
+  height: 50px;
 }
 .text-head {
   padding: 20px 0;
@@ -52,4 +52,7 @@ body {
 }
 .securing-chain {
   color: #eceff9;
+}
+.MuiOutlinedInput-input .MuiInputBase-input {
+  color: #fff;
 }
